@@ -405,13 +405,12 @@ void InterfaceAnalysis::storeResults(TFile * file_Results){
                 map_res_ObsAndDrawOpt["ResponseFitPkPos"]="APE1";
                 map_res_ObsAndDrawOpt["ResponseFitPkRes"]="APE1";
                 
+		visualizeUni.storeCanvasData(file_Results, "ResponseFitPkPos", "E1");
                 visualizeUni.storeListOfCanvasesGraph(file_Results,map_res_ObsAndDrawOpt, rSetup.bVisPlots_PhiLines);
                 visualizeUni.storeCanvasGraph2D(file_Results,"ResponseFitPkPos","TRI2Z",false);
-                //visualizeUni.storeCanvasGraph2D(file_Results,"ResponseFitPkPos","colz",false);
-                visualizeUni.storeCanvasGraph2D(file_Results,"ResponseFitPkPos","TRI2Z",true);
+                visualizeUni.storeCanvasGraph2D(file_Results,"ResponseFitPkPos","TRI2Z",true);	//Normalized version
                 visualizeUni.storeCanvasGraph2D(file_Results,"ResponseFitPkRes","TRI2Z",false);
-                //visualizeUni.storeCanvasGraph2D(file_Results,"ResponseFitPkRes","colz",false);
-                visualizeUni.storeCanvasGraph2D(file_Results,"ResponseFitPkRes","TRI2Z",true);
+                visualizeUni.storeCanvasGraph2D(file_Results,"ResponseFitPkRes","TRI2Z",true);	//Normalized version
             } //End Case: Fitting
         } //End Case: Cluster Analysis
     } //End Case: Visualize Output
