@@ -74,6 +74,7 @@ void VisualizeUniformity::storeCanvasData(TFile * file_InputRootFile, std::strin
     
     //shared_ptr<TGraphErrors> gObs; //Observable to be drawn
     std::vector<float> vec_fObs;
+    std::vector<float> vec_fObsVariance;
     
     SectorEta etaSector;
     
@@ -113,25 +114,77 @@ void VisualizeUniformity::storeCanvasData(TFile * file_InputRootFile, std::strin
     //Loop Over the detector's Eta Sectors
     //------------------------------------------------------
     for (int iEta=1; iEta <= iNumEta; ++iEta) {
+	//cout<<"=====NEXT ITERATION=====\n";
+
+	int iOrigSize = vec_fObs.size();
+
         etaSector = detMPGD.getEtaSector(iEta);
         
         std::vector<float> vec_fObsThisEta = getObsData(strObsName, etaSector); //Temporary container for valid r-value
         
-        std::copy(vec_fObsThisEta.begin(),vec_fObsThisEta.end(), vec_fObs.end() );
+	vec_fObs.resize( vec_fObs.size() + vec_fObsThisEta.size() );
+
+	//cout<<"BEFORE COPY\n";
+	//cout<<"vec_fObs.size() = " << vec_fObs.size() << endl;
+	//cout<<"vec_fObsThisEta.size() = " << vec_fObsThisEta.size() << endl;
+
+	auto iterObs = std::next(vec_fObs.begin(), iOrigSize );
+	std::copy(vec_fObsThisEta.begin(),vec_fObsThisEta.end(), iterObs );
         
-        cout<<"VisualizeUniformity::storeCanvasData() - vec_fObsThisEta.size() = " << vec_fObsThisEta.size() << endl;
-        cout<<"VisualizeUniformity::storeCanvasData() - vec_fObs.size() = " << vec_fObs.size() << endl;
+	//cout<<"AFTER COPY\n";
+        //cout<<"VisualizeUniformity::storeCanvasData() - vec_fObsThisEta.size() = " << vec_fObsThisEta.size() << endl;
+        //cout<<"VisualizeUniformity::storeCanvasData() - vec_fObs.size() = " << vec_fObs.size() << endl;
     } //End Loop Over Detector's Eta Sector
     
-    //Draw mgraph_Obs
+    //Determine the average of the dataset
     //------------------------------------------------------
-    //canv_DetSum.cd();
-    
+    float fAvg = std::accumulate(vec_fObs.begin(), vec_fObs.end(), 0. ) / vec_fObs.size();
+
+    vec_fObsVariance.resize( vec_fObs.size() );
+    std::transform(vec_fObs.begin(), vec_fObs.end(), vec_fObsVariance.begin(), [fAvg](float x) { return x - fAvg; });
+
+    float fStdDev = std::sqrt( std::inner_product(vec_fObsVariance.begin(), vec_fObsVariance.end(), vec_fObsVariance.begin(), 0.0) /  vec_fObsVariance.size() );
+
+    //Create Distribution
+    //------------------------------------------------------
+    std::shared_ptr<TH1F> hObs = std::make_shared<TH1F>( TH1F( getNameByIndex(-1, -1, -1, "h", strObsName + "Dataset" ).c_str(), "", 40, fAvg - 5. * fStdDev, fAvg + 5. * fStdDev) );
+    hObs->Sumw2();
+    hObs->GetXaxis()->SetTitle( strObsName.c_str() );
+    hObs->GetYaxis()->SetTitle( "N" );
+
+    for(int i=0; i < vec_fObs.size(); ++i){
+	hObs->Fill(vec_fObs[i]);
+    }
+
+    //Fit hObs
+    //------------------------------------------------------
+    std::shared_ptr<TF1> funcObs = std::make_shared<TF1>( TF1( getNameByIndex(-1, -1, -1, "func", strObsName + "Dataset" ).c_str(), "gaus(0)", fAvg - 5. * fStdDev, fAvg + 5. * fStdDev) );
+    funcObs->SetParameter(0, hObs->GetBinContent( hObs->GetMaximumBin() ) );
+    funcObs->SetParameter(1, hObs->GetMean() );
+    funcObs->SetParameter(2, hObs->GetRMS() );
+
+    hObs->Fit(funcObs.get(),"QM","", fAvg - 5. * fStdDev, fAvg + 5. * fStdDev );
+
+    //Draw hObs
+    //------------------------------------------------------
+    canv_DetSum.cd();
+    hObs->Draw( strDrawOption.c_str() );    
+    funcObs->Draw("same");
+
     //Setup the TLatex for "CMS Preliminary"
     //------------------------------------------------------
-    //TLatex latex_CMSPrelim;
-    //latex_CMSPrelim.SetTextSize(0.05);
-    //latex_CMSPrelim.DrawLatexNDC(0.1, 0.905, "CMS Preliminary" );
+    TLatex latex_CMSPrelim, latex_Obs_Mean, latex_Obs_StdDev, latex_Obs_PerErr;
+    latex_CMSPrelim.SetTextSize(0.05);
+    latex_CMSPrelim.DrawLatexNDC(0.1, 0.905, "CMS Preliminary" );
+    
+    latex_Obs_Mean.SetTextSize(0.03);
+    latex_Obs_Mean.DrawLatexNDC(0.15, 0.8, ("#mu = " + getString( funcObs->GetParameter(1) ) ).c_str() );
+    
+    latex_Obs_StdDev.SetTextSize(0.03);
+    latex_Obs_StdDev.DrawLatexNDC(0.15, 0.75, ("#sigma = " + getString( funcObs->GetParameter(2) ) ).c_str() );
+    
+    latex_Obs_PerErr.SetTextSize(0.03);
+    latex_Obs_PerErr.DrawLatexNDC(0.15, 0.7, ("#frac{#sigma}{#mu} = " + getString( funcObs->GetParameter(2) / funcObs->GetParameter(1) ) ).c_str() );
     
     //Draw the Legend
     //------------------------------------------------------
@@ -139,10 +192,11 @@ void VisualizeUniformity::storeCanvasData(TFile * file_InputRootFile, std::strin
     
     //Write the Canvas to the File
     //------------------------------------------------------
-    //dir_Summary->cd();
-    //canv_DetSum.Write();
-    //if (bSaveCanvases) { save2png(canv_DetSum); }
-    
+    dir_Summary->cd();
+    canv_DetSum.Write();
+    if (bSaveCanvases) { save2png(canv_DetSum); }
+    hObs->Write();
+
     //Do not close file_InputRootFile it is used elsewhere
     
     return;
@@ -1218,7 +1272,7 @@ void VisualizeUniformity::save2png(TCanvas & inputCanvas){
     return;
 } //End VisualizeUniformity::save2png()
 
-std::vector<float> VisualizeUniformity::getObsData(std::string &strObsName, Uniformity::SectorEta &inputEta){
+std::vector<float> VisualizeUniformity::getObsData(std::string strObsName, Uniformity::SectorEta &inputEta){
     //Variable Declaration
     std::vector<float> ret_vec;
     
@@ -1227,6 +1281,7 @@ std::vector<float> VisualizeUniformity::getObsData(std::string &strObsName, Unif
     //=======================Fit Result Parameters=======================
     if (0 == strObsName.compare("RESPONSEFITPKPOS") ) { //Case: Fit Pk Pos
         //ret_mset = inputEta.mset_fClustADC_Fit_PkPos;
+	ret_vec.resize( inputEta.mset_fClustADC_Fit_PkPos.size() );
         std::copy(inputEta.mset_fClustADC_Fit_PkPos.begin(), inputEta.mset_fClustADC_Fit_PkPos.end(), ret_vec.begin() );
     } //End Case: Fit Pk Pos
     //=======================Unrecognized Parameters=======================
@@ -1240,7 +1295,7 @@ std::vector<float> VisualizeUniformity::getObsData(std::string &strObsName, Unif
     return ret_vec;
 } //End VisualizeUniformity::getObsGraph()
 
-std::shared_ptr<TGraphErrors> VisualizeUniformity::getObsGraph(std::string &strObsName, Uniformity::SectorEta &inputEta){
+std::shared_ptr<TGraphErrors> VisualizeUniformity::getObsGraph(std::string strObsName, Uniformity::SectorEta &inputEta){
     //Variable Declaration
     std::shared_ptr<TGraphErrors> ret_graph;
     
@@ -1267,7 +1322,7 @@ std::shared_ptr<TGraphErrors> VisualizeUniformity::getObsGraph(std::string &strO
     return ret_graph;
 } //End VisualizeUniformity::getObsGraph()
 
-std::shared_ptr<TH1F> VisualizeUniformity::getObsHisto(std::string &strObsName, Uniformity::SectorEta &inputEta){
+std::shared_ptr<TH1F> VisualizeUniformity::getObsHisto(std::string strObsName, Uniformity::SectorEta &inputEta){
     //Variable Declaration
     std::shared_ptr<TH1F> ret_histo;
     
